Updating semantic to use latest version.

--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -18,17 +18,17 @@
             gtag('config', 'UA-127410136-1');
         </script>
 
+        <!--Bing Webmaster Thing -->
         <meta name="msvalidate.01" content="4668BE2493E0B673A2648478304FC472" />
 
         <!--IFSC Finder today ifsc.today@gmail.com -->
-<script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
-<script>
-  (adsbygoogle = window.adsbygoogle || []).push({
-    google_ad_client: "ca-pub-2125388685614259",
-    enable_page_level_ads: true
-  });
-</script>
-
+        <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+        <script>
+            (adsbygoogle = window.adsbygoogle || []).push({
+                google_ad_client: "ca-pub-2125388685614259",
+                enable_page_level_ads: true
+            });
+        </script>
 
         <script
             src="https://code.jquery.com/jquery-3.3.1.min.js"
@@ -51,12 +51,10 @@
         <script src="https://cdnjs.cloudflare.com/ajax/libs/mustache.js/3.0.0/mustache.min.js"></script>
         
         <script type="text/javascript" src="javascripts/script.js"></script>
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.4.1/components/search.min.css" />
         <link rel="stylesheet" type="text/css" href="/stylesheets/style.css">
-
-
-        <script
-            src="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.3.3/components/api.min.js">
-        </script>
+        
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.4.1/components/api.min.js"></script>
 
     </head>
     <body>
