Adjusting main page header top margin on mobile devices. Trying to fit the search field above the fold.

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -262,6 +262,13 @@ color : green;
   [class*="or lower hidden"] {
     display: none !important;
   }
+
+
+  .masthead h1.ui.header {
+    font-size: 4em;
+    margin-top: 0em;
+    color : red;  
+}
 }
 
 
