--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -52,7 +52,7 @@
         
         <script type="text/javascript" src="javascripts/script.js"></script>
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.4.1/components/search.min.css" />
-        <link rel="stylesheet" type="text/css" href="/stylesheets/style.css">
+        <link rel="stylesheet" type="text/css" href="/stylesheets/style.min.css">
         
         <script src="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.4.1/components/api.min.js"></script>
 
