Reordering js and css imports. Apparently that makes a difference. Also using google cdn for jquery. Apparenlty its faster.. Lets see.

--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -20,15 +20,6 @@
         <!--Bing Webmaster Thing -->
         <meta name="msvalidate.01" content="4668BE2493E0B673A2648478304FC472" />
 
-        <script
-            src="https://code.jquery.com/jquery-3.3.1.min.js"
-            integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
-            crossorigin="anonymous">
-        </script> 
-
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.4.1/semantic.min.js"></script>
-        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.4.1/semantic.min.css" />
-
 
         <!-- Site Properties -->
         <title>Bank IFSC Code, SBI, PNB, ICICI, all banks in India</title>
@@ -37,8 +28,12 @@
         -->
         <meta name="Description" content="Search IFSC code, find MICR code and address of State Bank Of India sbi ifsc code, ICICI Bank ifsc code, IDBI Bank ifsc code, Punjab National Bank pnb ifsc code. Find ifsc code for all banks in India. Reserve Bank of India (RBI) requires ifsc code for all NEFT and RTGS Online Transfer transactions.">
 
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/mustache.js/3.0.0/mustache.min.js"></script>
+        <link rel="stylesheet" type="text/css" href="/stylesheets/style.min.css">
         
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.4.1/semantic.min.js"></script>
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.4.1/semantic.min.css" />
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/mustache.js/3.0.0/mustache.min.js"></script>
         <script type="text/javascript" src="javascripts/script.js"></script>
         <link rel="stylesheet" type="text/css" href="/stylesheets/style.min.css">
 
