Removing Amazon Ads.

--- a/views/index.hbs
+++ b/views/index.hbs
@@ -34,14 +34,15 @@
             <div class="mobile hidden row" align="center">
                 <div class="one wide column"></div>
                 <div class="fourteen wide column">
-       
+
+                    <!--  
                     <script type="text/javascript" language="javascript">
                         var aax_size='728x90';
                         var aax_pubname = 'chapparfellow-21';
                         var aax_src='302';
                     </script>
                     <script type="text/javascript" language="javascript" src="https://c.amazon-adsystem.com/aax2/assoc.js"></script>
-       
+                    --> 
                 </div>
                 <div class="one wide column"></div>
             </div>
@@ -144,7 +145,7 @@
     </div>
     
     <!-- AD Block Begin-->
-    <div class="ui vertical adStripe center aligned segment" id="amazon_ad">
+    <div class="ui vertical adStripe center aligned segment" id="amazon_ad" style="display:none">
 
         <SCRIPT charset="utf-8" type="text/javascript" src="//ws-in.amazon-adsystem.com/widgets/q?rt=tf_ssw&ServiceVersion=20070822&MarketPlace=IN&ID=V20070822%2FIN%2Fchapparfellow-21%2F8003%2Fcabc79bb-9106-4b34-a15b-ff8a5810b548&Operation=GetScriptTemplate"> </SCRIPT> <NOSCRIPT><A rel="nofollow" HREF="//ws-in.amazon-adsystem.com/widgets/q?rt=tf_ssw&ServiceVersion=20070822&MarketPlace=IN&ID=V20070822%2FIN%2Fchapparfellow-21%2F8003%2Fcabc79bb-9106-4b34-a15b-ff8a5810b548&Operation=NoScript">Amazon.in Widgets</A></NOSCRIPT>
     </div>
@@ -182,9 +183,11 @@
         <div class="ui stackable inverted divided equal height stackable grid">
 
             <div class="middle aligned seven wide column">
-            <SCRIPT charset="utf-8" type="text/javascript" src="//ws-in.amazon-adsystem.com/widgets/q?rt=tf_ssw&ServiceVersion=20070822&MarketPlace=IN&ID=V20070822%2FIN%2Fchapparfellow-21%2F8003%2F90cb6e6e-11ea-4bbe-a19e-3e9ef8eaed0e&Operation=GetScriptTemplate"> </SCRIPT> <NOSCRIPT><A rel="nofollow" HREF="//ws-in.amazon-adsystem.com/widgets/q?rt=tf_ssw&ServiceVersion=20070822&MarketPlace=IN&ID=V20070822%2FIN%2Fchapparfellow-21%2F8003%2F90cb6e6e-11ea-4bbe-a19e-3e9ef8eaed0e&Operation=NoScript">Amazon.in Widgets</A></NOSCRIPT>
+                
+                <!--
+                <SCRIPT charset="utf-8" type="text/javascript" src="//ws-in.amazon-adsystem.com/widgets/q?rt=tf_ssw&ServiceVersion=20070822&MarketPlace=IN&ID=V20070822%2FIN%2Fchapparfellow-21%2F8003%2F90cb6e6e-11ea-4bbe-a19e-3e9ef8eaed0e&Operation=GetScriptTemplate"> </SCRIPT> <NOSCRIPT><A rel="nofollow" HREF="//ws-in.amazon-adsystem.com/widgets/q?rt=tf_ssw&ServiceVersion=20070822&MarketPlace=IN&ID=V20070822%2FIN%2Fchapparfellow-21%2F8003%2F90cb6e6e-11ea-4bbe-a19e-3e9ef8eaed0e&Operation=NoScript">Amazon.in Widgets</A></NOSCRIPT>
             </div> 
-
+            -->
             <div class="seven wide column">
                 <h4 class="ui inverted header">Legal Disclaimer</h4>
                 <p style="text-align:justify">www.ifsc.today has made every attempt to ensure the accuracy of the information provided on this website. Bank Details and IFS code has been fetched from the Reserve Bank of India's website. This organization (www.ifsc.today) does not accept any responsibility or liability for the accuracy, content, completeness, legality, or reliability of the information contained on this website.</p>
