--- a/views/index.hbs
+++ b/views/index.hbs
@@ -190,7 +190,8 @@
             -->
             <div class="seven wide column">
                 <h4 class="ui inverted header">Legal Disclaimer</h4>
-                <p style="text-align:justify">www.ifsc.today has made every attempt to ensure the accuracy of the information provided on this website. Bank Details and IFS code has been fetched from the Reserve Bank of India's website. This organization (www.ifsc.today) does not accept any responsibility or liability for the accuracy, content, completeness, legality, or reliability of the information contained on this website.</p>
+                <p style="text-align:justify;font-size:0.75rem">www.ifsc.today has made every attempt to ensure the accuracy of the information provided on this website. Bank Details and IFS code has been fetched from the Reserve Bank of India's website. This organization (www.ifsc.today) does not accept any responsibility or liability for the accuracy, content, completeness, legality, or reliability of the information contained on this website.</p>
+
 
                 <p><b>Data last updated :</b> 23-October-2018</p>
             </div>
