Making bank search textfield "huge". Branch search and city search now show counts of matching branches.

--- a/templates/info_findBranches.hbs
+++ b/templates/info_findBranches.hbs
@@ -23,7 +23,7 @@
                                     </div>
                                 </div>
 
-                                <div class="ui mobile hidden seven wide column">
+                                <div class="ui mobile seven wide column">
                                     <h2 style="color: darkgray">What is NEFT?</h2>
                                     <p style="font-family:Lato">National Electronic Funds Transfer (NEFT) is a nation-wide payment system facilitating one-to-one funds transfer. Under this Scheme, individuals can electronically transfer funds from any bank branch to any individual having an account with any other bank branch in the country participating in the Scheme.</p>
                                 </div>
