--- a/views/index.hbs
+++ b/views/index.hbs
@@ -60,7 +60,7 @@
                         <!-- ==================== -->
                         <!--      Search Bar Div   -->
                         <!-- ==================== -->
-                        <div class="ui large fluid search" id="findBankSearchField"> 
+                        <div class="ui huge fluid search" id="findBankSearchField"> 
                             <div class="ui icon input">
                                 <input class="prompt" type="text" placeholder="Search Bank Name" style="text-align: center;">
                                 <i class="search icon"></i>
