Fixing warnings as recommended by Neil Patel

--- a/views/index.hbs
+++ b/views/index.hbs
@@ -93,7 +93,7 @@
                         <div class="ui two column stackable center aligned grid">
                             <div class="middle aligned row">
                                 <div class="ui seven wide column">
-                                    <h2 style="color: darkgray">Popular Banks</h2>
+                                    <h2 style="color: darkgray">Popular Banks In India</h2>
                                     <div class="ui list">
                                         <div class="item">State Bank of India (SBI)</div>
                                         <div class="item">Canara Bank</div>
@@ -103,7 +103,7 @@
                                 </div>
                                 <div class="ui vertical divider"></div>
                                 <div class="ui seven wide column ">
-                                    <h2 style="color: darkgray">Banks in India</h2>
+                                    <h2 style="color: darkgray">Banks in India (NEFT)</h2>
                                     <div class="ui statistic">
                                         <div class="value">
                                           1.5 Lakh
