--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+         <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
         <script>
             (adsbygoogle = window.adsbygoogle || []).push({
                 google_ad_client: "ca-pub-5666511173297473",
@@ -29,7 +29,7 @@
 
         <!-- Site Properties -->
         <title>Bank IFSC Code, SBI, PNB, ICICI, all banks in India</title>
-        <meta name="Description" content="Search IFSC code, find MICR code and address of State Bank Of India sbi ifsc code, ICICI Bank ifsc code, IDBI Bank ifsc code, Punjab National Bank pnb ifsc code. Find ifsc code for all banks in India. Reserve Bank of India (RBI) requires ifsc code for all NEFT and RTGS Online Transfer transactions.">
+        <meta name="Description" content="Search IFSC code, find MICR code and address of State Bank Of India sbi ifsc code, ICICI Bank ifsc code, IDBI Bank ifsc code, Punjab National Bank pnb ifsc code. Find ifsc code for all banks in India. Reserve Bank of India (RBI) requires ifsc code for NEFT and RTGS transactions.">
 
         <link rel="stylesheet" type="text/css" href="/stylesheets/style.min.css">
         
