Adding RTGS Holidays Page

--- a/views/index.hbs
+++ b/views/index.hbs
@@ -2,18 +2,20 @@
 <div class="ui large top fixed hidden menu">
     <div class="ui container">
         <a href="#" class="active item" id="home-button">Home</a>
+        <a href="/rtgsholidays" class="item" id="home-button">RTGS Holidays</a>
     </div>
 </div>
 
 <!-- Sidebar Menu -->
 <div class="ui vertical inverted sidebar menu">
     <a href="#" class="active item" id="home-button">Home</a>
+    <a href="/rtgsholidays" class="item" id="home-button">RTGS Holidays</a>
 </div>
 
 <!-- Page Contents -->
 <div class="pusher">
 
-    <!-- Black segment at the top of the page...... -->
+    <!-- Yellow segment at the top of the page...... -->
     <div class="ui masthead center aligned basic segment" style="background-color: #fbbc09e6; background-image: linear-gradient(315deg, #FBBC09;0%, #FACC43 74%); background-size: cover; background-position: center center;">
 
         <div class="ui container">
@@ -22,6 +24,7 @@
                     <i class="sidebar icon"></i>
                 </a>
                 <a href="#" class="active item" id="home-button">Home</a>
+                <a href="/rtgsholidays" class="item" id="home-button">RTGS Holidays</a>
             </div>
         </div>
 
@@ -145,10 +148,12 @@
     </div>
     
     <!-- AD Block Begin-->
+    <!-- 
     <div class="ui vertical adStripe center aligned segment" id="amazon_ad" style="display:none">
 
         <SCRIPT charset="utf-8" type="text/javascript" src="//ws-in.amazon-adsystem.com/widgets/q?rt=tf_ssw&ServiceVersion=20070822&MarketPlace=IN&ID=V20070822%2FIN%2Fchapparfellow-21%2F8003%2Fcabc79bb-9106-4b34-a15b-ff8a5810b548&Operation=GetScriptTemplate"> </SCRIPT> <NOSCRIPT><A rel="nofollow" HREF="//ws-in.amazon-adsystem.com/widgets/q?rt=tf_ssw&ServiceVersion=20070822&MarketPlace=IN&ID=V20070822%2FIN%2Fchapparfellow-21%2F8003%2Fcabc79bb-9106-4b34-a15b-ff8a5810b548&Operation=NoScript">Amazon.in Widgets</A></NOSCRIPT>
     </div>
+    --> 
     <!-- 
         <div class="ui mobile hidden vertical stripe  segment">
         <div class="ui centered large rectangle test ad" data-text="Large Rectangle"></div>
