Reducing length of Meta tag to < 160 characters, Per recommendation from nielpatel.com

--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -29,8 +29,7 @@
 
         <!-- Site Properties -->
         <title>Bank IFSC Code, SBI, PNB, ICICI, all banks in India</title>
-        <meta name="Description" content="Search IFSC code, find MICR code and address of State Bank Of India sbi ifsc code, ICICI Bank ifsc code, IDBI Bank ifsc code, Punjab National Bank pnb ifsc code. Find ifsc code for all banks in India. Reserve Bank of India (RBI) requires ifsc code for NEFT and RTGS transactions.">
-
+<meta name="Description" content="Search IFSC code, MICR code and address of State Bank Of India sbi ifsc code, ICICI Bank ifsc code, IDBI Bank ifsc code, Punjab National Bank pnb ifsc code.">
         <link rel="stylesheet" type="text/css" href="/stylesheets/style.min.css">
         
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
