--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -36,7 +36,7 @@
         <script src="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.4.1/semantic.min.js"></script>
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.4.1/semantic.min.css" />
         <script src="https://cdnjs.cloudflare.com/ajax/libs/mustache.js/3.0.0/mustache.min.js"></script>
-        <script type="text/javascript" src="javascripts/script.js"></script>
+        <script type="text/javascript" src="javascripts/script.min.js"></script>
         <link rel="stylesheet" type="text/css" href="/stylesheets/style.min.css">
 
     </head>
