Fixing issue where iphone layout was messed up coz of the divider.

--- a/views/index.hbs
+++ b/views/index.hbs
@@ -104,7 +104,7 @@
                                         <div class="item">HDFC Bank</div>
                                     </div>
                                 </div>
-                                <div class="ui vertical divider"></div>
+                                <div class="ui vertical divider mobile hidden"></div>
                                 <div class="ui seven wide column ">
                                     <h2 style="color: darkgray">Banks in India (NEFT)</h2>
                                     <div class="ui statistic">
