Adding Cuelinks ads

--- a/views/index.hbs
+++ b/views/index.hbs
@@ -74,6 +74,12 @@
                         <div class="row"><br><br><br></div>
                         <a href="/" class="ui center aligned mini negative button" id="reset-button">Reset</a>
                     </div>
+                    
+                    <div class="row"><br><br><br></div>
+
+                    <div class="row">
+                        <iframe width='728' height='90' frameborder='0' scrolling='no' src='https://widget.cuelinks.com/widgets/39430?pub_id=43429CL39168'></iframe>
+                        </div>
                 </div>
                 <div class="one wide right column"></div>
             </div>
@@ -95,8 +101,15 @@
                     <div class="ui vertical stripe segment">
                         <div class="ui two column stackable center aligned grid">
                             <div class="middle aligned row">
+
+
+                                <div class="ui seven wide column mobile only">
+                                <iframe width='300' height='250' frameborder='0' scrolling='no' src='https://widget.cuelinks.com/widgets/39429?pub_id=43429CL39168'></iframe> 
+                                </div>
+
                                 <div class="ui seven wide column">
-                                    <h2 style="color: darkgray">Popular Banks In India</h2>
+
+                                <h2 style="color: darkgray">Popular Banks In India</h2>
                                     <div class="ui list">
                                         <div class="item">State Bank of India (SBI)</div>
                                         <div class="item">Canara Bank</div>
