--- a/views/index.hbs
+++ b/views/index.hbs
@@ -77,7 +77,7 @@
                     
                     <div class="row"><br><br><br></div>
 
-                    <div class="row">
+                    <div class="row mobile hidden">
                         <iframe width='728' height='90' frameborder='0' scrolling='no' src='https://widget.cuelinks.com/widgets/39430?pub_id=43429CL39168'></iframe>
                         </div>
                 </div>
