Updating db and records

--- a/views/index.hbs
+++ b/views/index.hbs
@@ -78,7 +78,7 @@
                     <div class="row"><br><br><br></div>
 
                     <div class="row mobile hidden">
-                        <iframe width='728' height='90' frameborder='0' scrolling='no' src='https://widget.cuelinks.com/widgets/39430?pub_id=43429CL39168'></iframe>
+                        <iframe width='728' height='90' frameborder='0' scrolling='yes' src='https://widget.cuelinks.com/widgets/39430?pub_id=43429CL39168'></iframe>
                         </div>
                 </div>
                 <div class="one wide right column"></div>
